--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "bootstrap-icons": "^1.11.3",
     "konva": "^9.3.12",
     "material-react-table": "^2.13.0",
+    "moment-timezone": "^0.5.45",
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
     "react": "^18.3.1",
