--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "moment-timezone": "^0.5.45",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
