--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,10 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "konva": "^9.3.12",
+    "luxon": "^3.4.4",
     "material-react-table": "^2.13.0",
     "moment-timezone": "^0.5.45",
     "primeicons": "^7.0.0",
