--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@atlaskit/drag-and-drop": "^0.15.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.7.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -27,10 +28,12 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-konva": "^18.2.10",
