--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "moment-timezone": "^0.5.45",
     "primeicons": "^7.0.0",
     "primereact": "^10.7.0",
+    "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.3",
