--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.3",
+    "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
